--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<header>
+    <a href="/" class="logo">Muvie</a>
+    <div class="nav">
+        <a routerLink="/filter">Filter</a>
+    </div>
+    <div class="clearfix"></div>
+</header>
 <router-outlet></router-outlet>
