--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -1,5 +1,7 @@
-<input type="file" id="file-input">
-<p id="status">Please select a file</p>
+<input type="file" (change)="selectFile($event)" placeholder="Upload file" accept=".mp4,.mov,.avi">
+
+<!-- <input type="file" id="file-input" #file-input> -->
+<!-- <p id="status">Please select a file</p>
 <img id="preview" src="/images/default.png">
 
 <form method="POST" action="/save-details">
@@ -7,4 +9,4 @@
   <input type="text" name="username" placeholder="Username"><br>
   <input type="text" name="full-name" placeholder="Full name"><br><br>
   <input type="submit" value="Update profile">
-</form>
+</form> -->
