--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,118 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
 
+body {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
+.clearfix {
+    clear:both;
+    display: block;
+}
+
+
+header {
+    background-color: #333;
+    padding: 20px;
+
+    a.logo {
+        color: #fff;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 40px;
+        float: left;
+    }
+
+    .nav {
+        float: right;
+        a {
+            color: #fff;
+            display: inline-block;
+            text-decoration: none;
+        }
+    }
+}
+
 mat-slider {
     width: 100%;
+}
+
+mat-basic-audio-player {
+    margin-top: 10px;
+    display: block;
+}
+
+.wrapper {
+    padding: 10px;
+
+    mat-card {
+        margin-bottom: 10px;
+    }
+}
+
+.filterButton {
+    margin: 20px;
+    //width: 100%;
+    //padding: 20px;
+    //font-size: 30px;
+}
+
+
+.example-list {
+  width: 1000px;
+  max-width: 100%;
+  border: solid 1px #ccc;
+  min-height: 60px;
+  display: flex;
+  flex-direction: row;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-top: 10px;
+}
+
+.example-box {
+  padding: 20px 10px;
+  border-right: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+  flex-grow: 1;
+  flex-basis: 0;
+
+  video {
+      width: 100px;
+  }
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 8px 10px 1px rgba(0, 0, 0, 0.14),
+              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
