--- a/src/app/new-movie/new-movie.component.html
+++ b/src/app/new-movie/new-movie.component.html
@@ -43,5 +43,5 @@
 </mat-card>
 -->
 
-    <button mat-raised-button class="filterButton" (click)="make(event)">3) Add Effects &amp; Filters</button>
+    <button mat-raised-button class="filterButton" (click)="make()">3) Add Effects &amp; Filters</button>
 </div>
