--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,24 @@
 <header>
-    <a href="/" class="logo">Muvie</a>
+    <a routerLink="/" class="logo">VISUALZ</a>
     <div class="nav">
-        <a routerLink="/filter">Filter</a>
+        <!--<a routerLink="/filter">Filter</a>-->
+        <a routerLink="/">HOME</a>
+        <a routerLink="/download">DOWNLOAD FREE</a>
+        <a routerLink="/prices">PRICES</a>
+        <a routerLink="/how-it-works">HOW IT WORKS</a>
+        <a routerLink="/support">SUPPORT</a>
     </div>
     <div class="clearfix"></div>
 </header>
+
 <router-outlet></router-outlet>
+
+<footer>
+    <a routerLink="/support">Support</a> |
+    <a routerLink="/artist-partners">Artist Partnership</a> |
+    <a routerLink="/venue-partners">Venue Partnership</a> |
+    <a routerLink="/investors">Investors</a> |
+    karl.steltenpohl [at] gmail.com
+    <br>
+    &copy; VISUALZ Copyright 2019. All Rights Reserved.
+</footer>
