--- a/src/app/buy/buy.component.html
+++ b/src/app/buy/buy.component.html
@@ -1,12 +1,12 @@
 <div class="content-wrapper dark">
     <h1 class="center">Prices</h1>
     <div class="slider">
-        <mat-slide-toggle class="example-margin" (change)="onChange($event)" [color]="primary" [checked]="yearly"
-            [disabled]="false">
+        <mat-slide-toggle class="example-margin" (change)="onChange($event)" [checked]="yearly" [disabled]="false">
             Yearly
         </mat-slide-toggle>
     </div>
     <div class="clearfix"></div>
+
 
     <div class="price_card alpha">
         <div class="header">
