--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,17 @@
 <header>
     <a routerLink="/" class="logo">VISUALZ</a>
     <div class="nav">
+        <div>
+            VISUALZ is coming soon. Email karl.steltenpohl [at] gmail.com for information or early access.
+        </div>
         <!--<a routerLink="/filter">Filter</a>-->
+        <!--
         <a routerLink="/">HOME</a>
         <a routerLink="/download">DOWNLOAD FREE</a>
         <a routerLink="/prices">PRICES</a>
         <a routerLink="/how-it-works">HOW IT WORKS</a>
         <a routerLink="/support">SUPPORT</a>
+        -->
     </div>
     <div class="clearfix"></div>
 </header>
@@ -14,10 +19,10 @@
 <router-outlet></router-outlet>
 
 <footer>
-    <a routerLink="/support">Support</a> |
+    <!--<a routerLink="/support">Support</a> |
     <a routerLink="/artist-partners">Artist Partnership</a> |
     <a routerLink="/venue-partners">Venue Partnership</a> |
-    <a routerLink="/investors">Investors</a> |
+    <a routerLink="/investors">Investors</a> |-->
     karl.steltenpohl [at] gmail.com
     <br>
     &copy; VISUALZ Copyright 2019. All Rights Reserved.
