--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,5 +1,5 @@
 <div class="content-wrapper">
-    <h1 class="center">Download For Windows or Mac</h1>
+    <h1 class="center">Download For<br>Windows or Mac</h1>
     <div class="clearfix"></div>
 
     <mat-grid-list cols="2" rowHeight="1.5:1">
