--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -1,100 +1,130 @@
 <div class="wrapper">
-
-    <h1>Audio-Responsive visual software for DJs, VJs, and Artists.</h1>
-    <h2>Add some vibes to your set.</h2>
-    <button mat-raised-button>ADD VIBES</button>
-    <button mat-raised-button>DOWNLOAD FREE</button>
-
+    <div class="main">
+        <h1>Audio-Responsive visual composition software for DJs, VJs, Artists, and Venues.</h1>
+        <h2>Add some vibes to your set.</h2>
+    </div>
 </div>
 
+
 <div class="content-wrapper">
-    <div class='left'>
+    <div class='macwrap' style="margin-top: -220px; position: relative;">
         <img src='../../assets/images/macbook_PNG72.gif' class='macbook' />
+        <iframe src="https://www.youtube.com/embed/yhCuCqJbOVE" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     </div>
-    <div class='left'>
-        <p>
-            VISUALZ is an audio-responsive tool for creating live visuals for
-            DJs, VJs, Musicians, Artists, and Venues.
-        </p>
+    <div class='' style="width: 400px; margin: 100px auto 40px;">
 
         <h3>Features</h3>
         <ul>
-            <li>Automatic beat detection and synching</li>
-            <li>Mashup video, images, colors, text, effects, camera feeds, and more</li>
-            <li>Real-time crowd engagement and interaction</li>
+            <li>Desktop app for Mac/Windows.</li>
+            <li>Audio-Responsive visuals.</li>
+            <li>Real-time beat/amplitude detection.</li>
+            <li>Compose visuals for your tracks and set.</li>
+            <li>Input via 1/8" Line In or Microphone.</li>
+            <li>Output via HDMI to projector, screen, or LED wall.</li>
+            <li>Convert your own art, graphics, images, and video into video sets.</li>
+            <li>Drag &amp; Drop images, videos, gifs, colors, webcam, text, and all other effects.</li>
+            <li>Realtime oscilloscope effect.</li>
+            <li>Various other effects...</li>
+            <li>Save individual tracks, and complete sets of multiple tracks.</li>
+            <li>Coming Soon: Change the color on your fan's phone at your set in sync with your visuals.</li>
+            <li>Coming Soon: Multiple remote cameras feature.</li>
+            <li>Coming Soon: Allow fans at your set to send live selfies directly to your visuals from their phones.
+            <li>Coming Soon: Built-in code editor for your own custom effects.
+            <li>Coming Soon: Rules to control when content plays during your track, eg. at loud or quiet points.
+            </li>
+            <li>... Much more is in development. We've got ideas on ideas for the future.</li>
         </ul>
-
-        <p>
-            Download VISUALZ for free to try it out bra.
-            If you like it and want to remove the watermark,
-            pay a one-time fee of $20.
-        </p>
     </div>
     <div class='clearfix'></div>
 </div>
 
 <header>
+    <h2>How It Works</h2>
+</header>
+<div class="content-wrapper">
+    <img src="../../assets/images/simplefasteasy-mobile.jpg" style="display:block; margin:0px auto;">
+</div>
+
+<header>
     <h2>Artist Partners</h2>
 </header>
-
 <div class="content-wrapper dark">
+    <div class="main">
+        <mat-card class="example-card">
+            <mat-card-header>
+                <mat-card-title>Sam White</mat-card-title>
+                <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="https://i1.sndcdn.com/avatars-000334629285-bpkurv-t200x200.jpg" alt="Sam White">
+            <mat-card-content>
+                <p>
+                    Burning Man, Electric Forest, and Bonnaroo.
+                    Sam plays ita ll drawomg inspiration from the
+                    city that created house, his hometown, Chicago.
+                    Currently holds down residencies at The Whistler
+                    and performing at clubs such as Virgin Hotel,
+                    The Annex, The Empty Bottle, Debonair and more.
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <a href="https://samwhitemusic.com/" target="_blank" mat-button>More Info</a>
+            </mat-card-actions>
+        </mat-card>
+        <mat-card class="example-card">
+            <mat-card-header>
+                <mat-card-title>Desadeca</mat-card-title>
+                <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="../../assets/images/mckinzy.jpg" alt="Mikinzie Stuart">
+            <mat-card-content>
+                <p>
+                    Good vibes only from Desadeca. DJing clubs such as Beauty Bar she is tearing up this city. Keep
+                    an eye
+                    on this one.
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <a href="https://www.facebook.com/djdesadeca/" target="_blank" mat-button>More Info</a>
+            </mat-card-actions>
+        </mat-card>
+        <mat-card class="example-card">
+            <mat-card-header>
+                <mat-card-title>Slippin Jimmy</mat-card-title>
+                <mat-card-subtitle>DJ [Indiana]</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="../../assets/images/evan.jpg" alt="Slippin Jimmy">
+            <mat-card-content>
+                <p>
+                    Slippin Jimmy is a beast. Enough Said. Residencies all over Chicago and Indiana. Check him out
+                    now.
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <a href="https://www.facebook.com/SlippinJimmysHouse/" target="_blank" mat-button>More Info</a>
+            </mat-card-actions>
+        </mat-card>
+        <mat-card class="example-card">
+            <mat-card-header>
+                <mat-card-title>Mark Wolff</mat-card-title>
+                <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="../../assets/images/mark.jpg" alt="Mark Wolff">
+            <mat-card-content>
+                <p>
+                    Mark Wolff can turn into an animal. The Whistler, Inn Joy, and Warehouse parties oh my. Mark
+                    is a true to fashion House Music efficianado.
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <a href="https://www.facebook.com/SlippinJimmysHouse/" target="_blank" mat-button>More Info</a>
+            </mat-card-actions>
+        </mat-card>
+    </div>
 
-    <mat-card class="example-card left">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Sam White</mat-card-title>
-            <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://i1.sndcdn.com/avatars-000334629285-bpkurv-t200x200.jpg" alt="Sam White">
-        <mat-card-content>
-            <p>
-                DJing electronic music festivals such as Burning Man, Electric Forest, and Bonnaroo. Sam
-                draws inspiration from the city that created house, his hometown, Chicago. He currently holds down
-                residencies at The Whistler and performing at clubs such as Virgin Hotel, The Annex, The Empty Bottle,
-                Debonair and more.
-            </p>
-        </mat-card-content>
-        <mat-card-actions>
-            <a href="https://samwhitemusic.com/" target="_blank" mat-button>More Info</a>
-        </mat-card-actions>
-    </mat-card>
 
-    <mat-card class="example-card left">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Desadeca</mat-card-title>
-            <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../assets/images/mckinzy.jpg" alt="Mikinzie Stuart">
-        <mat-card-content>
-            <p>
-                Good vibes only from Desadeca. DJing clubs such as Beauty Bar she is tearing up this city. Keep an eye
-                on this one.
-            </p>
-        </mat-card-content>
-        <mat-card-actions>
-            <a href="https://www.facebook.com/djdesadeca/" target="_blank" mat-button>More Info</a>
-        </mat-card-actions>
-    </mat-card>
 
-    <mat-card class="example-card left">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Slippin Jimmy</mat-card-title>
-            <mat-card-subtitle>DJ [Indiana]</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../assets/images/evan.jpg" alt="Slippin Jimmy">
-        <mat-card-content>
-            <p>
-                Slippin Jimmy is a beast. Enough Said. Residencies all over Chicago and Indiana. Check him out now.
-            </p>
-        </mat-card-content>
-        <mat-card-actions>
-            <a href="https://www.facebook.com/SlippinJimmysHouse/" target="_blank" mat-button>More Info</a>
-        </mat-card-actions>
-    </mat-card>
-
-    <div class='clearfix'></div>
 
 </div>
 
