server changes, privacy policy, terms, more....

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,17 @@
 <header>
     <a routerLink="/" class="logo">VISUALZ</a>
     <div class="nav">
-        <div>
+        <!--<div>
             VISUALZ is coming soon. Email karl.steltenpohl [at] gmail.com for information or early access.
-        </div>
+        </div>-->
         <!--<a routerLink="/filter">Filter</a>-->
-        <!--
+
         <a routerLink="/">HOME</a>
         <a routerLink="/download">DOWNLOAD FREE</a>
         <a routerLink="/prices">PRICES</a>
+        <!--
         <a routerLink="/how-it-works">HOW IT WORKS</a>
+        <a routerLink="/about">ABOUT</a>
         <a routerLink="/support">SUPPORT</a>
         -->
     </div>
@@ -19,11 +21,19 @@
 <router-outlet></router-outlet>
 
 <footer>
-    <!--<a routerLink="/support">Support</a> |
+    <!--
+    <a routerLink="/support">Support</a> |
+    -->
+    <a routerLink="/terms-conditions">Terms &amp; Conditions</a> |
+    <a routerLink="/privacy-policy">Privacy Policy</a>
+    <!--
     <a routerLink="/artist-partners">Artist Partnership</a> |
     <a routerLink="/venue-partners">Venue Partnership</a> |
-    <a routerLink="/investors">Investors</a> |-->
-    karl.steltenpohl [at] gmail.com
+    <a routerLink="/investors">Investors</a> |
+    <a routerLink="https://instagram.com/visualzstudio">Instagram</a>
+    -->
     <br>
     &copy; VISUALZ Copyright 2019. All Rights Reserved.
+    <br>
+    Created By: karl.steltenpohl [at] gmail.com
 </footer>
