--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,10 +1,11 @@
 <div class="content-wrapper">
     <h1 class="center">Download For<br>Windows or Mac</h1>
+    <h2>VISUALZ v1.0.0</h2>
     <div class="clearfix"></div>
 
-    <mat-grid-list cols="2" rowHeight="1.5:1">
+    <mat-grid-list cols="1" rowHeight="1.5:1">
         <mat-grid-tile>
-            <div>
+            <div class="bordered">
                 <button mat-raised-button class="pink">
                     Download For Windows
                 </button>
@@ -18,11 +19,10 @@
             </div>
         </mat-grid-tile>
         <mat-grid-tile>
-            <div>
-                <button mat-raised-button class="pink">
-                    Download For Mac OS
-                </button>
-
+            <div class="bordered">
+                <p>
+                    The Mac Version Is Coming Soon.
+                </p>
                 <img class="mac" src="../../assets/images/macos.png" />
 
                 <p>
