--- a/src/app/download/download.component.scss
+++ b/src/app/download/download.component.scss
@@ -10,6 +10,14 @@
     margin: 25px auto;
 }
 
+.bordered {
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 20px 20px 0px 20px;
+
+
+}
+
 .center {
     text-align: center;
 }
@@ -19,6 +27,10 @@ h1 {
     margin-top: 40px;
     margin-bottom: 80px;
     line-height: 54px;
+}
+
+h2 {
+    text-align: center;
 }
 
 mat-grid-tile {
