--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,9 @@
         <a routerLink="/">HOME</a>
         <a routerLink="/download">DOWNLOAD FREE</a>
         <a routerLink="/prices">PRICES</a>
-        <!--
-        <a routerLink="/how-it-works">HOW IT WORKS</a>
-        <a routerLink="/about">ABOUT</a>
         <a routerLink="/support">SUPPORT</a>
-        -->
+        <a routerLink="/how-it-works">HOW IT WORKS</a>
+
     </div>
     <div class="clearfix"></div>
 </header>
@@ -21,9 +19,9 @@
 <router-outlet></router-outlet>
 
 <footer>
-    <!--
+
     <a routerLink="/support">Support</a> |
-    -->
+    <a routerLink="/how-it-works">How It Works</a> |
     <a routerLink="/terms-conditions">Terms &amp; Conditions</a> |
     <a routerLink="/privacy-policy">Privacy Policy</a>
     <!--
