--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -1,3 +1,23 @@
-<p>
-  how works!
-</p>
+<div class="content-wrapper">
+    <h1 class="center">How It Works</h1>
+    <div class="clearfix"></div>
+
+    <div>
+        <img src="../../assets/images/help.jpg" style="width: 100%;" />
+
+    </div>
+
+    <div style="width: 800px; margin:40px auto;">
+        <h2>Crash Course:</h2>
+        <p>
+            Welcome to VISUALZ. When you open the app it will create a track for you automatically. The left menu
+            toggles between the Track List, and options for Content you can add to a track.
+        </p>
+
+        <p>Add some content by clicking the add content button to open the menu. Then click any of the options to add
+            content to the content slots.</p>
+
+        <p>More Coming Soon...</p>
+    </div>
+
+</div>
