--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -1,5 +1,11 @@
-<p>
-    support works!
-</p>
+<div class="content-wrapper">
+    <h1 class="center">Support</h1>
+    <h2>VISUALZ v1.0.0</h2>
+    <div class="clearfix"></div>
 
-https://github.com/madchops1/visualz/issues
+    <div>
+        <div id="disqus_thread"></div>
+
+    </div>
+
+</div>
