--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="main">
-        <h1>Audio-Responsive visual composition software for DJs, VJs, Artists, and Venues.</h1>
+        <h1>Realtime audio-responsive visual composition software for DJs, VJs, Artists, and Venues.</h1>
         <h2>Add some vibes to your set.</h2>
     </div>
 </div>
@@ -8,12 +8,10 @@
 
 <div class="content-wrapper">
     <div class='macwrap' style="margin-top: -220px; position: relative;">
-        <img src='../../assets/images/macbook_PNG72.gif' class='macbook' />
-        <iframe src="https://www.youtube.com/embed/yhCuCqJbOVE" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <img src='../../assets/images/macbook.png' class='macbook' />
 
     </div>
-    <div class='' style="width: 400px; margin: 100px auto 40px;">
+    <div class='' style="width: 400px; margin: 60px auto 40px;">
 
         <h3>Features</h3>
         <ul>
@@ -38,6 +36,10 @@
         </ul>
     </div>
     <div class='clearfix'></div>
+</div>
+<div class="content-wrapper dark">
+    <iframe src="https://www.youtube.com/embed/zb4jutWN_6M?rel=0&amp;controls=0" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <header>
@@ -118,7 +120,7 @@
                 </p>
             </mat-card-content>
             <mat-card-actions>
-                <a href="https://www.facebook.com/SlippinJimmysHouse/" target="_blank" mat-button>More Info</a>
+                <a href="https://soundcloud.com/markwolffmusic/" target="_blank" mat-button>More Info</a>
             </mat-card-actions>
         </mat-card>
     </div>
