--- a/src/app/download/download.component.scss
+++ b/src/app/download/download.component.scss
@@ -10,11 +10,17 @@
     margin: 25px auto;
 }
 
+a.button {
+    color: #ffffff !important;
+}
 .bordered {
     border: 1px solid #999;
     border-radius: 3px;
     padding: 20px 20px 0px 20px;
-
+    display: block;
+    width: 350px;
+    margin: 20px auto;
+    text-align:center;
 
 }
 
