--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,12 +23,13 @@
     <a routerLink="/support">Support</a> |
     <a routerLink="/how-it-works">How It Works</a> |
     <a routerLink="/terms-conditions">Terms &amp; Conditions</a> |
-    <a routerLink="/privacy-policy">Privacy Policy</a>
+    <a routerLink="/privacy-policy">Privacy Policy</a> |
+    <a routerLink="https://www.instagram.com/visualzapp/" target="_blank">Instagram</a>
     <!--
     <a routerLink="/artist-partners">Artist Partnership</a> |
     <a routerLink="/venue-partners">Venue Partnership</a> |
     <a routerLink="/investors">Investors</a> |
-    <a routerLink="https://instagram.com/visualzstudio">Instagram</a>
+    <a routerLink="https://www.instagram.com/visualzapp/">Instagram</a>
     -->
     <br>
     &copy; VISUALZ Copyright 2019. All Rights Reserved.
