--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="main">
-        <h1>Realtime audio-responsive visual composition software for DJs, VJs, Artists, and Venues.</h1>
-        <h2>Add some vibes to your set.</h2>
+        <h1>VISUALZ for DJs</h1>
+        <h2>Realtime audio-responsive visual composition software for DJs, VJs, Artists, and Venues.</h2>
     </div>
 </div>
 
