--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -167,7 +167,7 @@
     <p>If you have any questions about this Privacy Policy, please contact us:</p>
     <ul>
         <li>By email: karl.steltenpohl@gmail.com</li>
-        <li>By visiting this page on our website: http://www.visualzstudio.com</li>
+        <li>By visiting this page on our website: https://www.visualzstudio.com</li>
 
     </ul>
 
