--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -3,6 +3,7 @@
     <h2>VISUALZ v1.0.0</h2>
     <div class="clearfix"></div>
     <div class="bordered">
+
         <a href="https://visualz-1.s3.us-east-2.amazonaws.com/VISUALZ-installer.rar" target="_blank" mat-raised-button
             (click)="downloadWindows()" class="pink button">
             Download For Windows
@@ -23,7 +24,8 @@
 
         <p>
             <a href="https://www.google.com/search?q=allow+unsigned+apps+on+mac&rlz=1C1CHBF_enUS840US840&oq=allow+apps+on+mac&aqs=chrome.4.69i57j0l5.7806j0j4&sourceid=chrome&ie=UTF-8"
-                target="_blank">Allowing
+                target="_blank">
+                Allowing
                 Third Party Applications to Install on a MacBook</a>
         </p>
     </div>
