--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
     <a routerLink="/how-it-works">How It Works</a> |
     <a routerLink="/terms-conditions">Terms &amp; Conditions</a> |
     <a routerLink="/privacy-policy">Privacy Policy</a> |
-    <a routerLink="https://www.instagram.com/visualzapp/" target="_blank">Instagram</a>
+    <a href="https://www.instagram.com/visualzapp/" target="_blank">Instagram</a>
     <!--
     <a routerLink="/artist-partners">Artist Partnership</a> |
     <a routerLink="/venue-partners">Venue Partnership</a> |
