--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -4,6 +4,9 @@
     <div class="clearfix"></div>
 
     <div>
+        <div style="margin-bottom: 20px;">
+            <p>Welcome to VISUALZ support. Please add any questions, comments, or feedback to the thread below.</p>
+        </div>
         <div id="disqus_thread"></div>
 
     </div>
