--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -4,20 +4,91 @@
 
     <div>
         <img src="../../assets/images/help.jpg" style="width: 100%;" />
-
     </div>
 
     <div style="width: 800px; margin:40px auto;">
+
         <h2>Crash Course:</h2>
+
         <p>
             Welcome to VISUALZ. When you open the app it will create a track for you automatically. The left menu
             toggles between the Track List, and options for Content you can add to a track.
         </p>
 
-        <p>Add some content by clicking the add content button to open the menu. Then click any of the options to add
-            content to the content slots.</p>
+        <p>
+            Add some content by clicking the add content button to open the menu. Then click any of the options to add
+            content to the content slots.
+        </p>
 
-        <p>More Coming Soon...</p>
+        <h2>Beat Visualizer</h2>
+
+        <p>
+            The beat visualizer uses volume amplitude and peak detection to detect beats and changes in the music.
+        </p>
+
+        <p>
+            The threshold for beat detection can be adjusted to make it more or less sensitive or to handle different
+            volume levels. The threshold setting is located in the Track Settings panel, so you can have different
+            thresholds per track.
+        </p>
+
+        <p>
+            Content can change on the beat, every other beat, the measure, or every other measure. This option is in the
+            Track Settings panel.
+        </p>
+
+        <h2>Content Blocks</h2>
+
+        <p>
+            You can compose a set or track with different types of visual content. These content types are called
+            content blocks. When you click on a type of conent in the left sidebar it will be added to the track's
+            content slots. Settings for individual content blocks can be found in the Content Settings panel which is
+            visible when you select a block in the track's content slots.
+        </p>
+
+        <p>
+            There are several types of content blocks in VISUALZ:
+        </p>
+
+        <p>
+            <strong>Image</strong> - Just like it sounds you can upload any image you want in your set/track.
+        </p>
+
+        <p>
+            <strong>Video</strong> - Upload any video to your set/track.
+        </p>
+
+        <p>
+            <strong>Webcam</strong> - Connect your webcam to include shots of the artist or the crowd.
+        </p>
+
+        <p>
+            <strong>Color</strong> - Very simple color content.
+        </p>
+
+        <p>
+            <strong>Text</strong> - Need some text on the screen? That's what this is for.
+        </p>
+
+        <p>
+            <strong>Bubbles</strong> - Bubbles effect. This is one of the first code generated effects in the system.
+            There will be many more code based effects added as new versions release.
+        </p>
+
+        <p>
+            <strong>Oscilliscope</strong> - An actual oscilliscope code generated effect that responds to the actual
+            audio frequencies in the music.
+        </p>
+
+        <p>
+            <strong>Gif</strong> - The gif block will grab a random gif and insert it into the set. You can type in a
+            search tag to get gifs related to any subject you want.
+        </p>
+
+        <p>
+            We are creating more how-to content and resources all the time so check back or contact us if you have any
+            questions.
+        </p>
+
     </div>
-
 </div>
